tests/files/type_checker_tests/should_pass/042.cmdr
//Test that string interpolation type checks
y = "name";
x = $"3+2={3+2}; my name is $y; {y + y}";
