tests/files/type_checker_tests/should_fail/196.cmdr
//Should fail import if it is interpolated
name = "myfile";
import "${name}";
